# bubble-it

./: Cargo.toml  README.md  index.html  openapi-spec.yml
app/: Cargo.toml
app/src/: bubble.rs  lib.rs
sdk/: Cargo.toml
server/: Cargo.toml  README.md
server/migrations/: 20230514163856_init.down.sql  20230514163856_init.up.sql
server/src/: lib.rs  main.rs  messages.rs  routes.rs  users.rs
ui/: index.html  script.js  style.css
