[package]
name = "whatsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }
